# RoboTwins

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md
examples/humanoid_render/: README.md  config.yaml  run.py
examples/wheeled_tracking/: README.md  config.yaml  run.py  train.py
examples/wheeled_tracking/logs/: sample_run.csv
examples/wheeled_tracking/models/: README.md  wheeled.xml
robotwins/cli/: main.py
robotwins/core/config/: __init__.py  io.py  schema.py
robotwins/rl/trainers/: __init__.py  minimal.py
robotwins/sim/: __init__.py  interfaces.py
robotwins/sim/mujoco/runtime/: __init__.py  factory.py  humanoid_env.py  wheeled_env.py
robotwins/sysid/: __init__.py  datasets.py  schema.py
